commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42295,6 +42295,10 @@
     {
       "Date": "2022-09-21 01:00",
       "Rate": "20.0179"
+    },
+    {
+      "Date": "2022-09-21 02:00",
+      "Rate": "20.0145"
     }
   ]
 }
