commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42299,6 +42299,10 @@
     {
       "Date": "2022-09-21 02:00",
       "Rate": "20.0145"
+    },
+    {
+      "Date": "2022-09-21 03:00",
+      "Rate": "20.0005"
     }
   ]
 }
