commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42303,6 +42303,10 @@
     {
       "Date": "2022-09-21 03:00",
       "Rate": "20.0005"
+    },
+    {
+      "Date": "2022-09-21 04:00",
+      "Rate": "19.9970"
     }
   ]
 }
