--- a/indexRt.html
+++ b/indexRt.html
@@ -42307,6 +42307,10 @@
     {
       "Date": "2022-09-21 04:00",
       "Rate": "19.9970"
+    },
+    {
+      "Date": "2022-09-21 05:00",
+      "Rate": "19.9946"
     }
   ]
 }
