--- a/indexRt.html
+++ b/indexRt.html
@@ -42311,6 +42311,10 @@
     {
       "Date": "2022-09-21 05:00",
       "Rate": "19.9946"
+    },
+    {
+      "Date": "2022-09-21 06:00",
+      "Rate": "20.0000"
     }
   ]
 }
