commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42315,6 +42315,10 @@
     {
       "Date": "2022-09-21 06:00",
       "Rate": "20.0000"
+    },
+    {
+      "Date": "2022-09-21 07:00",
+      "Rate": "20.0114"
     }
   ]
 }
