commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42319,6 +42319,10 @@
     {
       "Date": "2022-09-21 07:00",
       "Rate": "20.0114"
+    },
+    {
+      "Date": "2022-09-21 08:00",
+      "Rate": "20.0028"
     }
   ]
 }
