commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42323,6 +42323,10 @@
     {
       "Date": "2022-09-21 08:00",
       "Rate": "20.0028"
+    },
+    {
+      "Date": "2022-09-21 09:00",
+      "Rate": "19.9967"
     }
   ]
 }
