commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42327,6 +42327,10 @@
     {
       "Date": "2022-09-21 09:00",
       "Rate": "19.9967"
+    },
+    {
+      "Date": "2022-09-21 10:00",
+      "Rate": "19.9886"
     }
   ]
 }
