commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42331,6 +42331,10 @@
     {
       "Date": "2022-09-21 10:00",
       "Rate": "19.9886"
+    },
+    {
+      "Date": "2022-09-21 11:00",
+      "Rate": "19.9996"
     }
   ]
 }
