commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42335,6 +42335,10 @@
     {
       "Date": "2022-09-21 11:00",
       "Rate": "19.9996"
+    },
+    {
+      "Date": "2022-09-21 12:00",
+      "Rate": "19.8911"
     }
   ]
 }
