commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42339,6 +42339,10 @@
     {
       "Date": "2022-09-21 12:00",
       "Rate": "19.8911"
+    },
+    {
+      "Date": "2022-09-21 13:00",
+      "Rate": "19.9995"
     }
   ]
 }
