commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42343,6 +42343,10 @@
     {
       "Date": "2022-09-21 13:00",
       "Rate": "19.9995"
+    },
+    {
+      "Date": "2022-09-21 14:00",
+      "Rate": "20.0217"
     }
   ]
 }
