commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42347,6 +42347,10 @@
     {
       "Date": "2022-09-21 14:00",
       "Rate": "20.0217"
+    },
+    {
+      "Date": "2022-09-21 15:00",
+      "Rate": "20.0182"
     }
   ]
 }
