commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42351,6 +42351,10 @@
     {
       "Date": "2022-09-21 15:00",
       "Rate": "20.0182"
+    },
+    {
+      "Date": "2022-09-21 16:00",
+      "Rate": "20.0288"
     }
   ]
 }
