commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42355,6 +42355,10 @@
     {
       "Date": "2022-09-21 16:00",
       "Rate": "20.0288"
+    },
+    {
+      "Date": "2022-09-21 17:00",
+      "Rate": "20.0455"
     }
   ]
 }
