commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42359,6 +42359,10 @@
     {
       "Date": "2022-09-21 17:00",
       "Rate": "20.0455"
+    },
+    {
+      "Date": "2022-09-21 18:00",
+      "Rate": "20.0607"
     }
   ]
 }
