commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42363,6 +42363,10 @@
     {
       "Date": "2022-09-21 18:00",
       "Rate": "20.0607"
+    },
+    {
+      "Date": "2022-09-21 19:00",
+      "Rate": "20.0643"
     }
   ]
 }
