commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42367,6 +42367,10 @@
     {
       "Date": "2022-09-21 19:00",
       "Rate": "20.0643"
+    },
+    {
+      "Date": "2022-09-21 20:00",
+      "Rate": "20.0509"
     }
   ]
 }
