--- a/indexRt.html
+++ b/indexRt.html
@@ -42371,6 +42371,10 @@
     {
       "Date": "2022-09-21 20:00",
       "Rate": "20.0509"
+    },
+    {
+      "Date": "2022-09-21 21:00",
+      "Rate": "20.0589"
     }
   ]
 }
