commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42375,6 +42375,10 @@
     {
       "Date": "2022-09-21 21:00",
       "Rate": "20.0589"
+    },
+    {
+      "Date": "2022-09-21 22:00",
+      "Rate": "20.0494"
     }
   ]
 }
