commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42379,6 +42379,10 @@
     {
       "Date": "2022-09-21 22:00",
       "Rate": "20.0494"
+    },
+    {
+      "Date": "2022-09-21 23:00",
+      "Rate": "20.0565"
     }
   ]
 }
