--- a/indexRt.html
+++ b/indexRt.html
@@ -42383,6 +42383,10 @@
     {
       "Date": "2022-09-21 23:00",
       "Rate": "20.0565"
+    },
+    {
+      "Date": "2022-09-22 00:00",
+      "Rate": "20.0698"
     }
   ]
 }
