commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42387,6 +42387,10 @@
     {
       "Date": "2022-09-22 00:00",
       "Rate": "20.0698"
+    },
+    {
+      "Date": "2022-09-22 01:00",
+      "Rate": "19.9881"
     }
   ]
 }
