--- a/indexRt.html
+++ b/indexRt.html
@@ -42391,6 +42391,10 @@
     {
       "Date": "2022-09-22 01:00",
       "Rate": "19.9881"
+    },
+    {
+      "Date": "2022-09-22 02:00",
+      "Rate": "19.8924"
     }
   ]
 }
