commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42395,6 +42395,10 @@
     {
       "Date": "2022-09-22 02:00",
       "Rate": "19.8924"
+    },
+    {
+      "Date": "2022-09-22 03:00",
+      "Rate": "19.9096"
     }
   ]
 }
