commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42399,6 +42399,10 @@
     {
       "Date": "2022-09-22 03:00",
       "Rate": "19.9096"
+    },
+    {
+      "Date": "2022-09-22 04:00",
+      "Rate": "19.8728"
     }
   ]
 }
