commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42403,6 +42403,10 @@
     {
       "Date": "2022-09-22 04:00",
       "Rate": "19.8728"
+    },
+    {
+      "Date": "2022-09-22 05:00",
+      "Rate": "19.8876"
     }
   ]
 }
