commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42407,6 +42407,10 @@
     {
       "Date": "2022-09-22 05:00",
       "Rate": "19.8876"
+    },
+    {
+      "Date": "2022-09-22 06:00",
+      "Rate": "19.8728"
     }
   ]
 }
