commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42411,6 +42411,10 @@
     {
       "Date": "2022-09-22 06:00",
       "Rate": "19.8728"
+    },
+    {
+      "Date": "2022-09-22 07:00",
+      "Rate": "19.9442"
     }
   ]
 }
