commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42415,6 +42415,10 @@
     {
       "Date": "2022-09-22 07:00",
       "Rate": "19.9442"
+    },
+    {
+      "Date": "2022-09-22 08:00",
+      "Rate": "19.9709"
     }
   ]
 }
