commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42419,6 +42419,10 @@
     {
       "Date": "2022-09-22 08:00",
       "Rate": "19.9709"
+    },
+    {
+      "Date": "2022-09-22 09:00",
+      "Rate": "19.9678"
     }
   ]
 }
