commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42423,6 +42423,10 @@
     {
       "Date": "2022-09-22 09:00",
       "Rate": "19.9678"
+    },
+    {
+      "Date": "2022-09-22 10:00",
+      "Rate": "19.9405"
     }
   ]
 }
