commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42427,6 +42427,10 @@
     {
       "Date": "2022-09-22 10:00",
       "Rate": "19.9405"
+    },
+    {
+      "Date": "2022-09-22 13:00",
+      "Rate": "19.9467"
     }
   ]
 }
