commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42431,6 +42431,10 @@
     {
       "Date": "2022-09-22 13:00",
       "Rate": "19.9467"
+    },
+    {
+      "Date": "2022-09-22 14:00",
+      "Rate": "19.9419"
     }
   ]
 }
