commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42435,6 +42435,10 @@
     {
       "Date": "2022-09-22 14:00",
       "Rate": "19.9419"
+    },
+    {
+      "Date": "2022-09-22 15:00",
+      "Rate": "19.9286"
     }
   ]
 }
