commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42439,6 +42439,10 @@
     {
       "Date": "2022-09-22 15:00",
       "Rate": "19.9286"
+    },
+    {
+      "Date": "2022-09-22 16:00",
+      "Rate": "19.9355"
     }
   ]
 }
