commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42443,6 +42443,10 @@
     {
       "Date": "2022-09-22 16:00",
       "Rate": "19.9355"
+    },
+    {
+      "Date": "2022-09-22 17:00",
+      "Rate": "19.9237"
     }
   ]
 }
