commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42447,6 +42447,10 @@
     {
       "Date": "2022-09-22 17:00",
       "Rate": "19.9237"
+    },
+    {
+      "Date": "2022-09-22 18:00",
+      "Rate": "19.9143"
     }
   ]
 }
