commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42451,6 +42451,10 @@
     {
       "Date": "2022-09-22 18:00",
       "Rate": "19.9143"
+    },
+    {
+      "Date": "2022-09-22 19:00",
+      "Rate": "19.9176"
     }
   ]
 }
