commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42455,6 +42455,10 @@
     {
       "Date": "2022-09-22 19:00",
       "Rate": "19.9176"
+    },
+    {
+      "Date": "2022-09-22 20:00",
+      "Rate": "19.9406"
     }
   ]
 }
