--- a/indexRt.html
+++ b/indexRt.html
@@ -42459,6 +42459,10 @@
     {
       "Date": "2022-09-22 20:00",
       "Rate": "19.9406"
+    },
+    {
+      "Date": "2022-09-22 21:00",
+      "Rate": "19.9463"
     }
   ]
 }
