commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42463,6 +42463,10 @@
     {
       "Date": "2022-09-22 21:00",
       "Rate": "19.9463"
+    },
+    {
+      "Date": "2022-09-22 22:00",
+      "Rate": "19.9524"
     }
   ]
 }
