--- a/indexRt.html
+++ b/indexRt.html
@@ -42467,6 +42467,10 @@
     {
       "Date": "2022-09-22 22:00",
       "Rate": "19.9524"
+    },
+    {
+      "Date": "2022-09-22 23:00",
+      "Rate": "19.9370"
     }
   ]
 }
