--- a/indexRt.html
+++ b/indexRt.html
@@ -42471,6 +42471,10 @@
     {
       "Date": "2022-09-22 23:00",
       "Rate": "19.9370"
+    },
+    {
+      "Date": "2022-09-23 00:00",
+      "Rate": "19.9647"
     }
   ]
 }
