commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42475,6 +42475,10 @@
     {
       "Date": "2022-09-23 00:00",
       "Rate": "19.9647"
+    },
+    {
+      "Date": "2022-09-23 01:00",
+      "Rate": "20.0023"
     }
   ]
 }
