commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42479,6 +42479,10 @@
     {
       "Date": "2022-09-23 01:00",
       "Rate": "20.0023"
+    },
+    {
+      "Date": "2022-09-23 02:00",
+      "Rate": "20.0485"
     }
   ]
 }
