commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42483,6 +42483,10 @@
     {
       "Date": "2022-09-23 02:00",
       "Rate": "20.0485"
+    },
+    {
+      "Date": "2022-09-23 03:00",
+      "Rate": "20.0635"
     }
   ]
 }
