commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42487,6 +42487,10 @@
     {
       "Date": "2022-09-23 03:00",
       "Rate": "20.0635"
+    },
+    {
+      "Date": "2022-09-23 04:00",
+      "Rate": "20.1117"
     }
   ]
 }
