--- a/indexRt.html
+++ b/indexRt.html
@@ -42491,6 +42491,10 @@
     {
       "Date": "2022-09-23 04:00",
       "Rate": "20.1117"
+    },
+    {
+      "Date": "2022-09-23 05:00",
+      "Rate": "20.0715"
     }
   ]
 }
