commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42495,6 +42495,10 @@
     {
       "Date": "2022-09-23 05:00",
       "Rate": "20.0715"
+    },
+    {
+      "Date": "2022-09-23 06:00",
+      "Rate": "20.1454"
     }
   ]
 }
