commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42499,6 +42499,10 @@
     {
       "Date": "2022-09-23 06:00",
       "Rate": "20.1454"
+    },
+    {
+      "Date": "2022-09-23 07:00",
+      "Rate": "20.1500"
     }
   ]
 }
