commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42503,6 +42503,10 @@
     {
       "Date": "2022-09-23 07:00",
       "Rate": "20.1500"
+    },
+    {
+      "Date": "2022-09-23 08:00",
+      "Rate": "20.1552"
     }
   ]
 }
