commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42507,6 +42507,10 @@
     {
       "Date": "2022-09-23 08:00",
       "Rate": "20.1552"
+    },
+    {
+      "Date": "2022-09-23 09:00",
+      "Rate": "20.1779"
     }
   ]
 }
