commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42511,6 +42511,10 @@
     {
       "Date": "2022-09-23 09:00",
       "Rate": "20.1779"
+    },
+    {
+      "Date": "2022-09-23 11:00",
+      "Rate": "20.2031"
     }
   ]
 }
