commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42515,6 +42515,10 @@
     {
       "Date": "2022-09-23 11:00",
       "Rate": "20.2031"
+    },
+    {
+      "Date": "2022-09-23 12:00",
+      "Rate": "20.2386"
     }
   ]
 }
