--- a/indexRt.html
+++ b/indexRt.html
@@ -42519,6 +42519,10 @@
     {
       "Date": "2022-09-23 12:00",
       "Rate": "20.2386"
+    },
+    {
+      "Date": "2022-09-23 13:00",
+      "Rate": "20.1853"
     }
   ]
 }
