commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42523,6 +42523,10 @@
     {
       "Date": "2022-09-23 13:00",
       "Rate": "20.1853"
+    },
+    {
+      "Date": "2022-09-23 14:00",
+      "Rate": "20.1999"
     }
   ]
 }
