--- a/indexRt.html
+++ b/indexRt.html
@@ -42527,6 +42527,10 @@
     {
       "Date": "2022-09-23 14:00",
       "Rate": "20.1999"
+    },
+    {
+      "Date": "2022-09-23 15:00",
+      "Rate": "20.1989"
     }
   ]
 }
