commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42531,6 +42531,10 @@
     {
       "Date": "2022-09-23 15:00",
       "Rate": "20.1989"
+    },
+    {
+      "Date": "2022-09-23 16:00",
+      "Rate": "20.1989"
     }
   ]
 }
