--- a/indexRt.html
+++ b/indexRt.html
@@ -42535,6 +42535,10 @@
     {
       "Date": "2022-09-23 16:00",
       "Rate": "20.1989"
+    },
+    {
+      "Date": "2022-09-23 17:00",
+      "Rate": "20.1989"
     }
   ]
 }
