commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42539,6 +42539,10 @@
     {
       "Date": "2022-09-23 17:00",
       "Rate": "20.1989"
+    },
+    {
+      "Date": "2022-09-26 08:00",
+      "Rate": "20.3386"
     }
   ]
 }
