commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42543,6 +42543,10 @@
     {
       "Date": "2022-09-26 08:00",
       "Rate": "20.3386"
+    },
+    {
+      "Date": "2022-09-26 09:00",
+      "Rate": "20.3759"
     }
   ]
 }
