commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42547,6 +42547,10 @@
     {
       "Date": "2022-09-26 09:00",
       "Rate": "20.3759"
+    },
+    {
+      "Date": "2022-09-26 10:00",
+      "Rate": "20.3925"
     }
   ]
 }
