commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42551,6 +42551,10 @@
     {
       "Date": "2022-09-26 10:00",
       "Rate": "20.3925"
+    },
+    {
+      "Date": "2022-09-26 11:00",
+      "Rate": "20.4306"
     }
   ]
 }
