commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42555,6 +42555,10 @@
     {
       "Date": "2022-09-26 11:00",
       "Rate": "20.4306"
+    },
+    {
+      "Date": "2022-09-26 12:00",
+      "Rate": "20.4205"
     }
   ]
 }
