commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42559,6 +42559,10 @@
     {
       "Date": "2022-09-26 12:00",
       "Rate": "20.4205"
+    },
+    {
+      "Date": "2022-09-26 13:00",
+      "Rate": "20.3987"
     }
   ]
 }
