commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42563,6 +42563,10 @@
     {
       "Date": "2022-09-26 13:00",
       "Rate": "20.3987"
+    },
+    {
+      "Date": "2022-09-26 14:00",
+      "Rate": "20.4134"
     }
   ]
 }
