commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42567,6 +42567,10 @@
     {
       "Date": "2022-09-26 14:00",
       "Rate": "20.4134"
+    },
+    {
+      "Date": "2022-09-26 15:00",
+      "Rate": "20.3921"
     }
   ]
 }
