commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42571,6 +42571,10 @@
     {
       "Date": "2022-09-26 15:00",
       "Rate": "20.3921"
+    },
+    {
+      "Date": "2022-09-26 16:00",
+      "Rate": "20.4015"
     }
   ]
 }
