commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42575,6 +42575,10 @@
     {
       "Date": "2022-09-26 16:00",
       "Rate": "20.4015"
+    },
+    {
+      "Date": "2022-09-26 17:00",
+      "Rate": "20.3772"
     }
   ]
 }
