commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42579,6 +42579,10 @@
     {
       "Date": "2022-09-26 17:00",
       "Rate": "20.3772"
+    },
+    {
+      "Date": "2022-09-26 18:00",
+      "Rate": "20.3498"
     }
   ]
 }
