commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42583,6 +42583,10 @@
     {
       "Date": "2022-09-26 18:00",
       "Rate": "20.3498"
+    },
+    {
+      "Date": "2022-09-26 19:00",
+      "Rate": "20.3581"
     }
   ]
 }
