commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42587,6 +42587,10 @@
     {
       "Date": "2022-09-26 19:00",
       "Rate": "20.3581"
+    },
+    {
+      "Date": "2022-09-26 20:00",
+      "Rate": "20.3553"
     }
   ]
 }
