commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42591,6 +42591,10 @@
     {
       "Date": "2022-09-26 20:00",
       "Rate": "20.3553"
+    },
+    {
+      "Date": "2022-09-26 21:00",
+      "Rate": "20.3468"
     }
   ]
 }
