commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42595,6 +42595,10 @@
     {
       "Date": "2022-09-26 21:00",
       "Rate": "20.3468"
+    },
+    {
+      "Date": "2022-09-26 22:00",
+      "Rate": "20.3409"
     }
   ]
 }
