commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42599,6 +42599,10 @@
     {
       "Date": "2022-09-26 22:00",
       "Rate": "20.3409"
+    },
+    {
+      "Date": "2022-09-26 23:00",
+      "Rate": "20.3255"
     }
   ]
 }
