commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42603,6 +42603,10 @@
     {
       "Date": "2022-09-26 23:00",
       "Rate": "20.3255"
+    },
+    {
+      "Date": "2022-09-27 00:00",
+      "Rate": "20.3291"
     }
   ]
 }
