commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42607,6 +42607,10 @@
     {
       "Date": "2022-09-27 00:00",
       "Rate": "20.3291"
+    },
+    {
+      "Date": "2022-09-27 01:00",
+      "Rate": "20.3063"
     }
   ]
 }
