commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42611,6 +42611,10 @@
     {
       "Date": "2022-09-27 01:00",
       "Rate": "20.3063"
+    },
+    {
+      "Date": "2022-09-27 02:00",
+      "Rate": "20.3339"
     }
   ]
 }
