commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42615,6 +42615,10 @@
     {
       "Date": "2022-09-27 02:00",
       "Rate": "20.3339"
+    },
+    {
+      "Date": "2022-09-27 03:00",
+      "Rate": "20.3836"
     }
   ]
 }
