commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42619,6 +42619,10 @@
     {
       "Date": "2022-09-27 03:00",
       "Rate": "20.3836"
+    },
+    {
+      "Date": "2022-09-27 04:00",
+      "Rate": "20.3389"
     }
   ]
 }
