--- a/indexRt.html
+++ b/indexRt.html
@@ -42623,6 +42623,10 @@
     {
       "Date": "2022-09-27 04:00",
       "Rate": "20.3389"
+    },
+    {
+      "Date": "2022-09-27 05:00",
+      "Rate": "20.3125"
     }
   ]
 }
