--- a/indexRt.html
+++ b/indexRt.html
@@ -42627,6 +42627,10 @@
     {
       "Date": "2022-09-27 05:00",
       "Rate": "20.3125"
+    },
+    {
+      "Date": "2022-09-27 06:00",
+      "Rate": "20.3619"
     }
   ]
 }
