commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42631,6 +42631,10 @@
     {
       "Date": "2022-09-27 06:00",
       "Rate": "20.3619"
+    },
+    {
+      "Date": "2022-09-27 07:00",
+      "Rate": "20.3746"
     }
   ]
 }
