commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42635,6 +42635,10 @@
     {
       "Date": "2022-09-27 07:00",
       "Rate": "20.3746"
+    },
+    {
+      "Date": "2022-09-27 08:00",
+      "Rate": "20.3211"
     }
   ]
 }
