commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42639,6 +42639,10 @@
     {
       "Date": "2022-09-27 08:00",
       "Rate": "20.3211"
+    },
+    {
+      "Date": "2022-09-27 09:00",
+      "Rate": "20.3216"
     }
   ]
 }
