--- a/indexRt.html
+++ b/indexRt.html
@@ -42643,6 +42643,10 @@
     {
       "Date": "2022-09-27 09:00",
       "Rate": "20.3216"
+    },
+    {
+      "Date": "2022-09-27 10:00",
+      "Rate": "20.3906"
     }
   ]
 }
