commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42647,6 +42647,10 @@
     {
       "Date": "2022-09-27 10:00",
       "Rate": "20.3906"
+    },
+    {
+      "Date": "2022-09-27 11:00",
+      "Rate": "20.3550"
     }
   ]
 }
