--- a/indexRt.html
+++ b/indexRt.html
@@ -42651,6 +42651,10 @@
     {
       "Date": "2022-09-27 11:00",
       "Rate": "20.3550"
+    },
+    {
+      "Date": "2022-09-27 12:00",
+      "Rate": "20.3389"
     }
   ]
 }
