--- a/indexRt.html
+++ b/indexRt.html
@@ -42655,6 +42655,10 @@
     {
       "Date": "2022-09-27 12:00",
       "Rate": "20.3389"
+    },
+    {
+      "Date": "2022-09-27 13:00",
+      "Rate": "20.3803"
     }
   ]
 }
