commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42659,6 +42659,10 @@
     {
       "Date": "2022-09-27 13:00",
       "Rate": "20.3803"
+    },
+    {
+      "Date": "2022-09-27 14:00",
+      "Rate": "20.3723"
     }
   ]
 }
