commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42663,6 +42663,10 @@
     {
       "Date": "2022-09-27 14:00",
       "Rate": "20.3723"
+    },
+    {
+      "Date": "2022-09-27 15:00",
+      "Rate": "20.3828"
     }
   ]
 }
