commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42667,6 +42667,10 @@
     {
       "Date": "2022-09-27 15:00",
       "Rate": "20.3828"
+    },
+    {
+      "Date": "2022-09-27 16:00",
+      "Rate": "20.3765"
     }
   ]
 }
