commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42671,6 +42671,10 @@
     {
       "Date": "2022-09-27 16:00",
       "Rate": "20.3765"
+    },
+    {
+      "Date": "2022-09-27 17:00",
+      "Rate": "20.3737"
     }
   ]
 }
