commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42675,6 +42675,10 @@
     {
       "Date": "2022-09-27 17:00",
       "Rate": "20.3737"
+    },
+    {
+      "Date": "2022-09-27 18:00",
+      "Rate": "20.3887"
     }
   ]
 }
