commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42679,6 +42679,10 @@
     {
       "Date": "2022-09-27 18:00",
       "Rate": "20.3887"
+    },
+    {
+      "Date": "2022-09-27 19:00",
+      "Rate": "20.4371"
     }
   ]
 }
