commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42683,6 +42683,10 @@
     {
       "Date": "2022-09-27 19:00",
       "Rate": "20.4371"
+    },
+    {
+      "Date": "2022-09-27 20:00",
+      "Rate": "20.4877"
     }
   ]
 }
