commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42687,6 +42687,10 @@
     {
       "Date": "2022-09-27 20:00",
       "Rate": "20.4877"
+    },
+    {
+      "Date": "2022-09-27 21:00",
+      "Rate": "20.4624"
     }
   ]
 }
