commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42691,6 +42691,10 @@
     {
       "Date": "2022-09-27 21:00",
       "Rate": "20.4624"
+    },
+    {
+      "Date": "2022-09-27 22:00",
+      "Rate": "20.4787"
     }
   ]
 }
