commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42695,6 +42695,10 @@
     {
       "Date": "2022-09-27 22:00",
       "Rate": "20.4787"
+    },
+    {
+      "Date": "2022-09-27 23:00",
+      "Rate": "20.4641"
     }
   ]
 }
