commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42699,6 +42699,10 @@
     {
       "Date": "2022-09-27 23:00",
       "Rate": "20.4641"
+    },
+    {
+      "Date": "2022-09-28 00:00",
+      "Rate": "20.5046"
     }
   ]
 }
