--- a/indexRt.html
+++ b/indexRt.html
@@ -42703,6 +42703,10 @@
     {
       "Date": "2022-09-28 00:00",
       "Rate": "20.5046"
+    },
+    {
+      "Date": "2022-09-28 01:00",
+      "Rate": "20.4729"
     }
   ]
 }
