commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42707,6 +42707,10 @@
     {
       "Date": "2022-09-28 01:00",
       "Rate": "20.4729"
+    },
+    {
+      "Date": "2022-09-28 02:00",
+      "Rate": "20.5132"
     }
   ]
 }
