commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42711,6 +42711,10 @@
     {
       "Date": "2022-09-28 02:00",
       "Rate": "20.5132"
+    },
+    {
+      "Date": "2022-09-28 03:00",
+      "Rate": "20.5418"
     }
   ]
 }
