commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42715,6 +42715,10 @@
     {
       "Date": "2022-09-28 03:00",
       "Rate": "20.5418"
+    },
+    {
+      "Date": "2022-09-28 04:00",
+      "Rate": "20.4021"
     }
   ]
 }
