--- a/indexRt.html
+++ b/indexRt.html
@@ -42719,6 +42719,10 @@
     {
       "Date": "2022-09-28 04:00",
       "Rate": "20.4021"
+    },
+    {
+      "Date": "2022-09-28 05:00",
+      "Rate": "20.4490"
     }
   ]
 }
