commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42723,6 +42723,10 @@
     {
       "Date": "2022-09-28 05:00",
       "Rate": "20.4490"
+    },
+    {
+      "Date": "2022-09-28 06:00",
+      "Rate": "20.3396"
     }
   ]
 }
