commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42727,6 +42727,10 @@
     {
       "Date": "2022-09-28 06:00",
       "Rate": "20.3396"
+    },
+    {
+      "Date": "2022-09-28 07:00",
+      "Rate": "20.3185"
     }
   ]
 }
