commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42731,6 +42731,10 @@
     {
       "Date": "2022-09-28 07:00",
       "Rate": "20.3185"
+    },
+    {
+      "Date": "2022-09-28 08:00",
+      "Rate": "20.3104"
     }
   ]
 }
