commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42735,6 +42735,10 @@
     {
       "Date": "2022-09-28 08:00",
       "Rate": "20.3104"
+    },
+    {
+      "Date": "2022-09-28 09:00",
+      "Rate": "20.3075"
     }
   ]
 }
