commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42739,6 +42739,10 @@
     {
       "Date": "2022-09-28 09:00",
       "Rate": "20.3075"
+    },
+    {
+      "Date": "2022-09-28 10:00",
+      "Rate": "20.2060"
     }
   ]
 }
