commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42743,6 +42743,10 @@
     {
       "Date": "2022-09-28 10:00",
       "Rate": "20.2060"
+    },
+    {
+      "Date": "2022-09-28 11:00",
+      "Rate": "20.1585"
     }
   ]
 }
