commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42747,6 +42747,10 @@
     {
       "Date": "2022-09-28 11:00",
       "Rate": "20.1585"
+    },
+    {
+      "Date": "2022-09-28 12:00",
+      "Rate": "20.1402"
     }
   ]
 }
