--- a/indexRt.html
+++ b/indexRt.html
@@ -42751,6 +42751,10 @@
     {
       "Date": "2022-09-28 12:00",
       "Rate": "20.1402"
+    },
+    {
+      "Date": "2022-09-28 13:00",
+      "Rate": "20.1221"
     }
   ]
 }
