commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42755,6 +42755,10 @@
     {
       "Date": "2022-09-28 13:00",
       "Rate": "20.1221"
+    },
+    {
+      "Date": "2022-09-28 14:00",
+      "Rate": "20.1436"
     }
   ]
 }
