commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42759,6 +42759,10 @@
     {
       "Date": "2022-09-28 14:00",
       "Rate": "20.1436"
+    },
+    {
+      "Date": "2022-09-28 15:00",
+      "Rate": "20.1504"
     }
   ]
 }
