commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42763,6 +42763,10 @@
     {
       "Date": "2022-09-28 15:00",
       "Rate": "20.1504"
+    },
+    {
+      "Date": "2022-09-28 16:00",
+      "Rate": "20.1722"
     }
   ]
 }
