--- a/indexRt.html
+++ b/indexRt.html
@@ -42767,6 +42767,10 @@
     {
       "Date": "2022-09-28 16:00",
       "Rate": "20.1722"
+    },
+    {
+      "Date": "2022-09-28 17:00",
+      "Rate": "20.1884"
     }
   ]
 }
