--- a/indexRt.html
+++ b/indexRt.html
@@ -42771,6 +42771,10 @@
     {
       "Date": "2022-09-28 17:00",
       "Rate": "20.1884"
+    },
+    {
+      "Date": "2022-09-29 07:04",
+      "Rate": "20.1915"
     }
   ]
 }
