commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42775,6 +42775,10 @@
     {
       "Date": "2022-09-29 07:04",
       "Rate": "20.1915"
+    },
+    {
+      "Date": "2022-09-29 08:00",
+      "Rate": "20.2114"
     }
   ]
 }
