commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42779,6 +42779,10 @@
     {
       "Date": "2022-09-29 08:00",
       "Rate": "20.2114"
+    },
+    {
+      "Date": "2022-09-29 09:00",
+      "Rate": "20.1520"
     }
   ]
 }
