--- a/indexRt.html
+++ b/indexRt.html
@@ -42783,6 +42783,10 @@
     {
       "Date": "2022-09-29 09:00",
       "Rate": "20.1520"
+    },
+    {
+      "Date": "2022-09-29 10:00",
+      "Rate": "20.1520"
     }
   ]
 }
