commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42787,6 +42787,10 @@
     {
       "Date": "2022-09-29 10:00",
       "Rate": "20.1520"
+    },
+    {
+      "Date": "2022-09-29 11:00",
+      "Rate": "20.1709"
     }
   ]
 }
