commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42791,6 +42791,10 @@
     {
       "Date": "2022-09-29 11:00",
       "Rate": "20.1709"
+    },
+    {
+      "Date": "2022-09-29 12:00",
+      "Rate": "20.1979"
     }
   ]
 }
