commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42795,6 +42795,10 @@
     {
       "Date": "2022-09-29 12:00",
       "Rate": "20.1979"
+    },
+    {
+      "Date": "2022-09-29 13:00",
+      "Rate": "20.1733"
     }
   ]
 }
