--- a/indexRt.html
+++ b/indexRt.html
@@ -42799,6 +42799,10 @@
     {
       "Date": "2022-09-29 13:00",
       "Rate": "20.1733"
+    },
+    {
+      "Date": "2022-09-29 14:00",
+      "Rate": "20.1642"
     }
   ]
 }
