--- a/indexRt.html
+++ b/indexRt.html
@@ -42803,6 +42803,10 @@
     {
       "Date": "2022-09-29 14:00",
       "Rate": "20.1642"
+    },
+    {
+      "Date": "2022-09-29 15:00",
+      "Rate": "20.1629"
     }
   ]
 }
