commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42807,6 +42807,10 @@
     {
       "Date": "2022-09-29 15:00",
       "Rate": "20.1629"
+    },
+    {
+      "Date": "2022-09-29 16:00",
+      "Rate": "20.1552"
     }
   ]
 }
