commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42811,6 +42811,10 @@
     {
       "Date": "2022-09-29 16:00",
       "Rate": "20.1552"
+    },
+    {
+      "Date": "2022-09-29 17:00",
+      "Rate": "20.1284"
     }
   ]
 }
