commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42815,6 +42815,10 @@
     {
       "Date": "2022-09-29 17:00",
       "Rate": "20.1284"
+    },
+    {
+      "Date": "2022-09-29 18:00",
+      "Rate": "20.1457"
     }
   ]
 }
