commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42819,6 +42819,10 @@
     {
       "Date": "2022-09-29 18:00",
       "Rate": "20.1457"
+    },
+    {
+      "Date": "2022-09-29 19:00",
+      "Rate": "20.1678"
     }
   ]
 }
