commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42823,6 +42823,10 @@
     {
       "Date": "2022-09-29 19:00",
       "Rate": "20.1678"
+    },
+    {
+      "Date": "2022-09-30 06:00",
+      "Rate": "20.1064"
     }
   ]
 }
