commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42827,6 +42827,10 @@
     {
       "Date": "2022-09-30 06:00",
       "Rate": "20.1064"
+    },
+    {
+      "Date": "2022-09-30 07:00",
+      "Rate": "20.1131"
     }
   ]
 }
