commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42831,6 +42831,10 @@
     {
       "Date": "2022-09-30 07:00",
       "Rate": "20.1131"
+    },
+    {
+      "Date": "2022-09-30 08:00",
+      "Rate": "20.1038"
     }
   ]
 }
