commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42835,6 +42835,10 @@
     {
       "Date": "2022-09-30 08:00",
       "Rate": "20.1038"
+    },
+    {
+      "Date": "2022-09-30 09:00",
+      "Rate": "20.1163"
     }
   ]
 }
