commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42839,6 +42839,10 @@
     {
       "Date": "2022-09-30 09:00",
       "Rate": "20.1163"
+    },
+    {
+      "Date": "2022-09-30 10:00",
+      "Rate": "20.1163"
     }
   ]
 }
