--- a/indexRt.html
+++ b/indexRt.html
@@ -42843,6 +42843,10 @@
     {
       "Date": "2022-09-30 10:00",
       "Rate": "20.1163"
+    },
+    {
+      "Date": "2022-09-30 11:00",
+      "Rate": "20.0974"
     }
   ]
 }
