commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42847,6 +42847,10 @@
     {
       "Date": "2022-09-30 11:00",
       "Rate": "20.0974"
+    },
+    {
+      "Date": "2022-09-30 12:00",
+      "Rate": "20.1225"
     }
   ]
 }
