commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42851,6 +42851,10 @@
     {
       "Date": "2022-09-30 12:00",
       "Rate": "20.1225"
+    },
+    {
+      "Date": "2022-09-30 13:00",
+      "Rate": "20.1370"
     }
   ]
 }
