--- a/indexRt.html
+++ b/indexRt.html
@@ -42855,6 +42855,10 @@
     {
       "Date": "2022-09-30 13:00",
       "Rate": "20.1370"
+    },
+    {
+      "Date": "2022-09-30 14:00",
+      "Rate": "20.1459"
     }
   ]
 }
