--- a/indexRt.html
+++ b/indexRt.html
@@ -42859,6 +42859,10 @@
     {
       "Date": "2022-09-30 14:00",
       "Rate": "20.1459"
+    },
+    {
+      "Date": "2022-09-30 15:00",
+      "Rate": "20.1480"
     }
   ]
 }
