--- a/indexRt.html
+++ b/indexRt.html
@@ -42863,6 +42863,10 @@
     {
       "Date": "2022-09-30 15:00",
       "Rate": "20.1480"
+    },
+    {
+      "Date": "2022-09-30 16:00",
+      "Rate": "20.1480"
     }
   ]
 }
