commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42867,6 +42867,10 @@
     {
       "Date": "2022-09-30 16:00",
       "Rate": "20.1480"
+    },
+    {
+      "Date": "2022-09-30 17:00",
+      "Rate": "20.1480"
     }
   ]
 }
