commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42871,6 +42871,10 @@
     {
       "Date": "2022-09-30 17:00",
       "Rate": "20.1480"
+    },
+    {
+      "Date": "2022-10-03 08:00",
+      "Rate": "19.9930"
     }
   ]
 }
