commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42875,6 +42875,10 @@
     {
       "Date": "2022-10-03 08:00",
       "Rate": "19.9930"
+    },
+    {
+      "Date": "2022-10-03 09:00",
+      "Rate": "20.0361"
     }
   ]
 }
