--- a/indexRt.html
+++ b/indexRt.html
@@ -42879,6 +42879,10 @@
     {
       "Date": "2022-10-03 09:00",
       "Rate": "20.0361"
+    },
+    {
+      "Date": "2022-10-03 10:00",
+      "Rate": "20.0355"
     }
   ]
 }
