commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42883,6 +42883,10 @@
     {
       "Date": "2022-10-03 10:00",
       "Rate": "20.0355"
+    },
+    {
+      "Date": "2022-10-03 11:00",
+      "Rate": "20.0443"
     }
   ]
 }
