commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42887,6 +42887,10 @@
     {
       "Date": "2022-10-03 11:00",
       "Rate": "20.0443"
+    },
+    {
+      "Date": "2022-10-03 12:00",
+      "Rate": "20.0220"
     }
   ]
 }
