--- a/indexRt.html
+++ b/indexRt.html
@@ -42891,6 +42891,10 @@
     {
       "Date": "2022-10-03 12:00",
       "Rate": "20.0220"
+    },
+    {
+      "Date": "2022-10-03 13:00",
+      "Rate": "20.0305"
     }
   ]
 }
