commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42895,6 +42895,10 @@
     {
       "Date": "2022-10-03 13:00",
       "Rate": "20.0305"
+    },
+    {
+      "Date": "2022-10-03 14:00",
+      "Rate": "20.0294"
     }
   ]
 }
