commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42899,6 +42899,10 @@
     {
       "Date": "2022-10-03 14:00",
       "Rate": "20.0294"
+    },
+    {
+      "Date": "2022-10-03 15:00",
+      "Rate": "20.0300"
     }
   ]
 }
