commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42903,6 +42903,10 @@
     {
       "Date": "2022-10-03 15:00",
       "Rate": "20.0300"
+    },
+    {
+      "Date": "2022-10-03 16:00",
+      "Rate": "20.0319"
     }
   ]
 }
