commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42907,6 +42907,10 @@
     {
       "Date": "2022-10-03 16:00",
       "Rate": "20.0319"
+    },
+    {
+      "Date": "2022-10-03 17:00",
+      "Rate": "20.0206"
     }
   ]
 }
