commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42911,6 +42911,10 @@
     {
       "Date": "2022-10-03 17:00",
       "Rate": "20.0206"
+    },
+    {
+      "Date": "2022-10-03 18:00",
+      "Rate": "20.0242"
     }
   ]
 }
