commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42915,6 +42915,10 @@
     {
       "Date": "2022-10-03 18:00",
       "Rate": "20.0242"
+    },
+    {
+      "Date": "2022-10-03 19:00",
+      "Rate": "20.0336"
     }
   ]
 }
