commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42919,6 +42919,10 @@
     {
       "Date": "2022-10-03 19:00",
       "Rate": "20.0336"
+    },
+    {
+      "Date": "2022-10-03 20:00",
+      "Rate": "20.0182"
     }
   ]
 }
