commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42923,6 +42923,10 @@
     {
       "Date": "2022-10-03 20:00",
       "Rate": "20.0182"
+    },
+    {
+      "Date": "2022-10-03 21:00",
+      "Rate": "20.0096"
     }
   ]
 }
