commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42927,6 +42927,10 @@
     {
       "Date": "2022-10-03 21:00",
       "Rate": "20.0096"
+    },
+    {
+      "Date": "2022-10-03 22:00",
+      "Rate": "20.0101"
     }
   ]
 }
