commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42931,6 +42931,10 @@
     {
       "Date": "2022-10-03 22:00",
       "Rate": "20.0101"
+    },
+    {
+      "Date": "2022-10-03 23:00",
+      "Rate": "19.9936"
     }
   ]
 }
