commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42935,6 +42935,10 @@
     {
       "Date": "2022-10-03 23:00",
       "Rate": "19.9936"
+    },
+    {
+      "Date": "2022-10-04 00:00",
+      "Rate": "19.9696"
     }
   ]
 }
