commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42939,6 +42939,10 @@
     {
       "Date": "2022-10-04 00:00",
       "Rate": "19.9696"
+    },
+    {
+      "Date": "2022-10-04 01:00",
+      "Rate": "19.9816"
     }
   ]
 }
