commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42943,6 +42943,10 @@
     {
       "Date": "2022-10-04 01:00",
       "Rate": "19.9816"
+    },
+    {
+      "Date": "2022-10-04 02:00",
+      "Rate": "20.0015"
     }
   ]
 }
