commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42947,6 +42947,10 @@
     {
       "Date": "2022-10-04 02:00",
       "Rate": "20.0015"
+    },
+    {
+      "Date": "2022-10-04 03:00",
+      "Rate": "19.9856"
     }
   ]
 }
