commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42951,6 +42951,10 @@
     {
       "Date": "2022-10-04 03:00",
       "Rate": "19.9856"
+    },
+    {
+      "Date": "2022-10-04 04:00",
+      "Rate": "19.9895"
     }
   ]
 }
