commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42955,6 +42955,10 @@
     {
       "Date": "2022-10-04 04:00",
       "Rate": "19.9895"
+    },
+    {
+      "Date": "2022-10-04 05:00",
+      "Rate": "20.0055"
     }
   ]
 }
