commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42959,6 +42959,10 @@
     {
       "Date": "2022-10-04 05:00",
       "Rate": "20.0055"
+    },
+    {
+      "Date": "2022-10-04 06:00",
+      "Rate": "19.9723"
     }
   ]
 }
