commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42963,6 +42963,10 @@
     {
       "Date": "2022-10-04 06:00",
       "Rate": "19.9723"
+    },
+    {
+      "Date": "2022-10-04 07:00",
+      "Rate": "19.9742"
     }
   ]
 }
