commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42967,6 +42967,10 @@
     {
       "Date": "2022-10-04 07:00",
       "Rate": "19.9742"
+    },
+    {
+      "Date": "2022-10-04 08:00",
+      "Rate": "19.9889"
     }
   ]
 }
