commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42971,6 +42971,10 @@
     {
       "Date": "2022-10-04 08:00",
       "Rate": "19.9889"
+    },
+    {
+      "Date": "2022-10-04 09:00",
+      "Rate": "19.9710"
     }
   ]
 }
