commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42975,6 +42975,10 @@
     {
       "Date": "2022-10-04 09:00",
       "Rate": "19.9710"
+    },
+    {
+      "Date": "2022-10-04 10:00",
+      "Rate": "19.9897"
     }
   ]
 }
