commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42979,6 +42979,10 @@
     {
       "Date": "2022-10-04 10:00",
       "Rate": "19.9897"
+    },
+    {
+      "Date": "2022-10-04 11:00",
+      "Rate": "19.9833"
     }
   ]
 }
