commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42983,6 +42983,10 @@
     {
       "Date": "2022-10-04 11:00",
       "Rate": "19.9833"
+    },
+    {
+      "Date": "2022-10-04 12:00",
+      "Rate": "19.9620"
     }
   ]
 }
