commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42987,6 +42987,10 @@
     {
       "Date": "2022-10-04 12:00",
       "Rate": "19.9620"
+    },
+    {
+      "Date": "2022-10-04 13:00",
+      "Rate": "19.9536"
     }
   ]
 }
