commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42991,6 +42991,10 @@
     {
       "Date": "2022-10-04 13:00",
       "Rate": "19.9536"
+    },
+    {
+      "Date": "2022-10-04 14:00",
+      "Rate": "19.9691"
     }
   ]
 }
