commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42995,6 +42995,10 @@
     {
       "Date": "2022-10-04 14:00",
       "Rate": "19.9691"
+    },
+    {
+      "Date": "2022-10-04 15:00",
+      "Rate": "19.9808"
     }
   ]
 }
