commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -42999,6 +42999,10 @@
     {
       "Date": "2022-10-04 15:00",
       "Rate": "19.9808"
+    },
+    {
+      "Date": "2022-10-04 16:00",
+      "Rate": "19.9718"
     }
   ]
 }
