commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43003,6 +43003,10 @@
     {
       "Date": "2022-10-04 16:00",
       "Rate": "19.9718"
+    },
+    {
+      "Date": "2022-10-04 17:00",
+      "Rate": "19.9685"
     }
   ]
 }
