commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43007,6 +43007,10 @@
     {
       "Date": "2022-10-04 17:00",
       "Rate": "19.9685"
+    },
+    {
+      "Date": "2022-10-04 18:00",
+      "Rate": "19.9802"
     }
   ]
 }
