commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43011,6 +43011,10 @@
     {
       "Date": "2022-10-04 18:00",
       "Rate": "19.9802"
+    },
+    {
+      "Date": "2022-10-04 19:00",
+      "Rate": "20.0008"
     }
   ]
 }
