commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43015,6 +43015,10 @@
     {
       "Date": "2022-10-04 19:00",
       "Rate": "20.0008"
+    },
+    {
+      "Date": "2022-10-04 20:00",
+      "Rate": "20.0042"
     }
   ]
 }
