commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43019,6 +43019,10 @@
     {
       "Date": "2022-10-04 20:00",
       "Rate": "20.0042"
+    },
+    {
+      "Date": "2022-10-04 21:00",
+      "Rate": "19.9900"
     }
   ]
 }
