--- a/indexRt.html
+++ b/indexRt.html
@@ -43023,6 +43023,10 @@
     {
       "Date": "2022-10-04 21:00",
       "Rate": "19.9900"
+    },
+    {
+      "Date": "2022-10-04 22:00",
+      "Rate": "19.9906"
     }
   ]
 }
