commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43027,6 +43027,10 @@
     {
       "Date": "2022-10-04 22:00",
       "Rate": "19.9906"
+    },
+    {
+      "Date": "2022-10-04 23:00",
+      "Rate": "19.9838"
     }
   ]
 }
