commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43031,6 +43031,10 @@
     {
       "Date": "2022-10-04 23:00",
       "Rate": "19.9838"
+    },
+    {
+      "Date": "2022-10-05 00:00",
+      "Rate": "19.9569"
     }
   ]
 }
