commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43035,6 +43035,10 @@
     {
       "Date": "2022-10-05 00:00",
       "Rate": "19.9569"
+    },
+    {
+      "Date": "2022-10-05 01:00",
+      "Rate": "20.0241"
     }
   ]
 }
