commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43039,6 +43039,10 @@
     {
       "Date": "2022-10-05 01:00",
       "Rate": "20.0241"
+    },
+    {
+      "Date": "2022-10-05 02:00",
+      "Rate": "20.0481"
     }
   ]
 }
