--- a/indexRt.html
+++ b/indexRt.html
@@ -43043,6 +43043,10 @@
     {
       "Date": "2022-10-05 02:00",
       "Rate": "20.0481"
+    },
+    {
+      "Date": "2022-10-05 03:00",
+      "Rate": "20.0667"
     }
   ]
 }
