--- a/indexRt.html
+++ b/indexRt.html
@@ -43047,6 +43047,10 @@
     {
       "Date": "2022-10-05 03:00",
       "Rate": "20.0667"
+    },
+    {
+      "Date": "2022-10-05 04:00",
+      "Rate": "20.0324"
     }
   ]
 }
