commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43051,6 +43051,10 @@
     {
       "Date": "2022-10-05 04:00",
       "Rate": "20.0324"
+    },
+    {
+      "Date": "2022-10-05 05:00",
+      "Rate": "20.0449"
     }
   ]
 }
