--- a/indexRt.html
+++ b/indexRt.html
@@ -43055,6 +43055,10 @@
     {
       "Date": "2022-10-05 05:00",
       "Rate": "20.0449"
+    },
+    {
+      "Date": "2022-10-05 06:00",
+      "Rate": "20.0429"
     }
   ]
 }
