commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43059,6 +43059,10 @@
     {
       "Date": "2022-10-05 06:00",
       "Rate": "20.0429"
+    },
+    {
+      "Date": "2022-10-05 07:00",
+      "Rate": "20.0871"
     }
   ]
 }
