commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43063,6 +43063,10 @@
     {
       "Date": "2022-10-05 07:00",
       "Rate": "20.0871"
+    },
+    {
+      "Date": "2022-10-05 08:00",
+      "Rate": "20.1361"
     }
   ]
 }
