commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43067,6 +43067,10 @@
     {
       "Date": "2022-10-05 08:00",
       "Rate": "20.1361"
+    },
+    {
+      "Date": "2022-10-05 09:00",
+      "Rate": "20.1098"
     }
   ]
 }
