--- a/indexRt.html
+++ b/indexRt.html
@@ -43071,6 +43071,10 @@
     {
       "Date": "2022-10-05 09:00",
       "Rate": "20.1098"
+    },
+    {
+      "Date": "2022-10-05 10:00",
+      "Rate": "20.0960"
     }
   ]
 }
