commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -43075,6 +43075,10 @@
     {
       "Date": "2022-10-05 10:00",
       "Rate": "20.0960"
+    },
+    {
+      "Date": "2022-10-05 11:00",
+      "Rate": "20.0605"
     }
   ]
 }
