--- a/indexRt.html
+++ b/indexRt.html
@@ -43079,6 +43079,10 @@
     {
       "Date": "2022-10-05 11:00",
       "Rate": "20.0605"
+    },
+    {
+      "Date": "2022-10-05 12:00",
+      "Rate": "20.0268"
     }
   ]
 }
