--- a/indexRt.html
+++ b/indexRt.html
@@ -43083,6 +43083,10 @@
     {
       "Date": "2022-10-05 12:00",
       "Rate": "20.0268"
+    },
+    {
+      "Date": "2022-10-05 13:00",
+      "Rate": "20.0610"
     }
   ]
 }
